Use non-breaking hyphens in date.

--- a/src/cadorsfeed/templates/list.html
+++ b/src/cadorsfeed/templates/list.html
@@ -17,7 +17,7 @@
   <tr>
     <td><a href="{{ url_for('report.display_report',
 		 report=report.cadors_number) }}">{{report.cadors_number}}</a></td>
-    <td>{{report.timestamp}}</td>
+    <td>{{ report.timestamp.strftime("%Y&#8209;%m&#8209;%d %H%M&nbsp;Z") | safe }}</td>
     <td>{{report.location}}</td>
     <td>{{report.type}}</td>
     <td>{{report.narrative[0].narrative | truncate(length=150)}}</td>
