--- a/src/cadorsfeed/templates/list.html
+++ b/src/cadorsfeed/templates/list.html
@@ -1,31 +1,14 @@
 {% extends "base.html" %}
 {% import "pagination.html" as pg %}
+{% import "report_list.html" as r %}
 
 {% block body %}
 {% if pagination.page > 1 %}
-{{ pg.render_pagination(pagination) }}
+{{ pg.render_pagination(pagination, endpoint) }}
 {% endif %}
 
-<table>
-  <thead>
-  <tr><th>Report Number</th><th>Report Date</th><th>Location</th><th>Type</th>
-    <th>Preview</th>
-  </tr>
-  </thead>
-  <tbody>
-  {% for report in reports %}
-  <tr>
-    <td><a href="{{ url_for('report.display_report',
-		 report=report.cadors_number) }}">{{report.cadors_number}}</a></td>
-    <td>{{ report.timestamp.strftime("%Y&#8209;%m&#8209;%d %H%M&nbsp;Z") | safe }}</td>
-    <td>{{report.location}}</td>
-    <td>{{report.type}}</td>
-    <td>{{report.narrative[0].narrative | truncate(length=150)}}</td>
-  </tr>
-  {% endfor %}
-  </tbody>
-</table>
+{{ r.report_list(reports) }}
 
-{{ pg.render_pagination(pagination) }}
+{{ pg.render_pagination(pagination, endpoint) }}
 
 {% endblock %}
