--- a/src/cadorsfeed/templates/list.html
+++ b/src/cadorsfeed/templates/list.html
@@ -4,11 +4,11 @@
 
 {% block body %}
 {% if pagination.page > 1 %}
-{{ pg.render_pagination(pagination, endpoint) }}
+{{ pg.render_pagination(pagination) }}
 {% endif %}
 
 {{ r.report_list(reports) }}
 
-{{ pg.render_pagination(pagination, endpoint) }}
+{{ pg.render_pagination(pagination) }}
 
 {% endblock %}
