--- a/src/cadorsfeed/templates/search.html
+++ b/src/cadorsfeed/templates/search.html
@@ -1,57 +1,93 @@
 {% extends "base.html" %}
 
+{% block head %}
+{{super()}}
+<style type="text/css">
+form div.span-4 input.text {
+    width: 120px;
+}
+</style>
+{% endblock %}
+
 {% block body %}
 
-<div class="full">
+<div>
+  <form action="/search/text" method="GET" class="span-10">
+    <fieldset>
+      <legend>Search report text</legend>
+      <p>
+        <label for="query">Query</label><br>
+        <input type="text" id="query" name="q" class="text">
+      </p>
+      <p><input type="submit" value="Submit"></p>
+    </fieldset>
+  </form>
+      
+  <form action="/search/location" method="GET" class="span-14 last">
+    <fieldset>
+      <legend>Search by location</legend>
+      <div class="span-4">
+        <label for="latitude">Latitude</label><br>
+        <input type="text" id="latitude" name="latitude" class="text">
+      </div>
+      <div class="span-4">
+        <label for="longitude">Longitude</label><br>
+        <input type="text" id="longitude" name="longitude" class="text">
+      </div>
+      <div class="span-4 last">
+        <label for="radius">Radius (km)</label><br>
+        <input type="text" id="radius" name="radius" class="text">
+      </div>
+      <div class="span-4 clear">
+        <input type="radio" id="location-primary" name="primary" value="primary" checked="checked">
+        <label for="location-primary">Primary location only</label>
+      </div>
+      <div class="span-4 last">
+        <input type="radio" id="location-all" name="primary" value="all">
+        <label for="location-all">All locations</label>
+      </div>
+      <div class="span-4 clear last">
+        <input type="submit" value="Submit">
+      </div>
+    </fieldset>
+  </form>
 
-<form action="/search/text" method="GET">
-<fieldset class="width4">
-<legend>Search report text</legend>
-<label class="unitx2 first">Query<input type="text" name="q" class="text"></label>
-</fieldset>
-<fieldset class="width2">
-<input type="submit" value="Submit"> 
-</fieldset>
-</form>
+  <form action="/search/aerodrome" method="GET" class="span-10">
+    <fieldset>
+      <legend>Search by aerodrome</legend>
+      <div class="span-4 last">
+        <label for="code">Code</label><br>
+        <input type="text" id="code" name="code" class="text" maxlength="4">
+      </div>
+      <div class="span-4 clear">
+        <input type="radio" id="aerodrome-primary" name="primary" value="primary" checked="checked">
+        <label for="aerodrome-primary">Primary location only</label>
+      </div>
+      <div class="span-4 last">
+        <input type="radio" id="aerodrome-all" name="primary" value="all">
+        <label for="aerodrome-all">All locations</label>
+      </div>
+      <div class="span-4 clear last">
+        <input type="submit" value="Submit">
+      </div>
+    </fieldset>
+  </form>
 
-<form action="/search/location" method="GET">
-<fieldset class="width4">
-<legend>Search by location</legend>
-<label class="unitx1 first">Latitude<input type="text" name="latitude" class="text"></label>
-<label class="unitx1">Longitude<input type="text" name="longitude" class="text"></label>
-<label class="unitx1">Radius (km)<input type="text" name="radius" class="text"></label>
-<label class="unitx2 first"><input type="radio" name="primary" value="primary" checked="checked">Primary location only</label>
-<label class="unitx2"><input type="radio" name="primary" value="all">All locations</label>
-</fieldset>
-<fieldset class="width2">
-<input type="submit" value="Submit"> 
-</fieldset>
-</form>
-
-
-<form action="/search/aerodrome" method="GET">
-<fieldset class="width4">
-<legend>Search by aerodrome</legend>
-<label class="unitx1 first">Code<input type="text" name="code" class="text"></label>
-<label class="unitx2 first"><input type="radio" name="primary" value="primary" checked="checked">Primary location only</label>
-<label class="unitx2"><input type="radio" name="primary" value="all">All locations</label>
-</fieldset>
-<fieldset class="width2">
-<input type="submit" value="Submit"> 
-</fieldset>
-</form>
-
-<form action="/search/flight" method="GET">
-<fieldset class="width4">
-<legend>Search by flight number</legend>
-<label class="unitx1 first">Operator<input type="text" name="operator" class="text"></label>
-<label class="unitx1">Flight<input type="text" name="flight" class="text"></label>
-</fieldset>
-<fieldset class="width2">
-<input type="submit" value="Submit"> 
-</fieldset>
-</form>
-
+  <form action="/search/flight" method="GET" class="span-14 last">
+    <fieldset>
+      <legend>Search by flight number</legend>
+      <div class="span-4">
+        <label for="operator">Operator</label><br>
+        <input type="text" id="operator" name="operator" class="text">
+      </div>
+      <div class="span-4 last">
+        <label for="flight">Flight</label><br>
+        <input type="text" id="flight" name="flight" class="text">
+      </div>
+      <div class="span-4 clear last">
+        <input type="submit" value="Submit"> 
+      </div>
+    </fieldset>
+  </form>
 </div>
-
 {% endblock %}
