--- a/src/cadorsfeed/templates/base.html
+++ b/src/cadorsfeed/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
 {% block head %}
 <title>cadorsfeed</title>
@@ -8,10 +8,8 @@
 <!--[if lt IE 8]>
 <link rel="stylesheet" href="/static/css/blueprint/ie.css" type="text/css" media="screen, projection">
 <![endif]-->
-<!--[if IE]>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js" />
-<![endif]-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script src="/static/js/modernizr-1.7.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script src="http://cdn.jquerytools.org/1.2.5/all/jquery.tools.min.js"></script>
 <style type="text/css">
 
@@ -34,10 +32,9 @@ div#nav a:hover {
     background: #FF1721;
     color: white;
 }
-
 </style>
-
 {% endblock %}
+
 </head>
 
 <body>
