Optimize report count in daily report list.

--- a/src/cadorsfeed/templates/daily_report_list.html
+++ b/src/cadorsfeed/templates/daily_report_list.html
@@ -12,14 +12,14 @@
 <th>Report Date</th><th>Number of Reports</th>
 </thead>
 <tbody>
-{% for daily_report in daily_reports %}
+{% for (daily_report, count) in daily_reports %}
 <tr>
 <td><a href="{{ url_for('daily_report.do_daily_report', 
          year=daily_report.report_date.year,
          month=daily_report.report_date.month,
          day=daily_report.report_date.day,
          format='html')}}">{{ daily_report.report_date.strftime("%Y-%m-%d") }}</a></td>
-<td>{{daily_report.reports|length}}
+<td>{{count}}</td>
 </tr>
 {% endfor %}
 </tbody>
