--- a/src/cadorsfeed/templates/report.html
+++ b/src/cadorsfeed/templates/report.html
@@ -9,12 +9,10 @@
 <link type="text/css" rel="stylesheet" media="screen" href="/static/css/map_overlay.css">
 {% endblock %}
 
+{% block title %}Report {{report.cadors_number}}{% endblock %}
 
 {% block body %}
 <div class="report" id="{{report.cadors_number}}">
-<h2>CADORS Report {{report.cadors_number}}</h2>
-
-
 <section class="span-6">
 <h3>Occurrence Information</h3>
 <dl>
