--- a/src/cadorsfeed/templates/list.html
+++ b/src/cadorsfeed/templates/list.html
@@ -2,6 +2,8 @@
 {% import "pagination.html" as pg %}
 {% import "report_list.html" as r %}
 
+{% block title %}{{ title }}{% endblock %}
+
 {% block body %}
 {% if pagination.page > 1 %}
 {{ pg.render_pagination(pagination) }}
