--- a/src/cadorsfeed/templates/search.html
+++ b/src/cadorsfeed/templates/search.html
@@ -15,6 +15,8 @@ input[type="search"] {
 <script type="text/javascript" src="/static/js/search.js"></script>
 {% endblock %}
 
+{% block title %}Search{% endblock %}
+
 {% block body %}
 <div>
   <form action="/search/text" method="GET" class="span-10">
